@@ -3,8 +3,8 @@ Requirements
 
 * MySQL 8.0.0 or higher, with the X Plugin enabled
 * Python >= 3.8
-* Protobuf C++ (version >= 4.21.1, <= 4.21.12)
-* Python Protobuf (version >= 4.21.1, <= 4.21.12)
+* Protobuf C++ (version == 4.25.3)
+* Python Protobuf (version == 4.25.3)
 * dnspython (version == 2.6.1) for DNS SRV support
 * lz4 (version >= 2.1.6, <= 4.3.2) for connection compression support
 * zstandard (version >= 0.12.0, <= 0.19.0) for connection compression support
