@@ -1,5 +1,4 @@
-protobuf>=4.21.1,<=4.21.12
+protobuf==4.25.3
 dnspython==2.6.1
 lz4>=2.1.6,<=4.3.2
 zstandard>=0.12.0,<=0.19.0
-
