@@ -13,6 +13,7 @@ v9.0.0
 
 - WL#16350: Update dnspython version
 - WL#16318: Deprecate Cursors Prepared Raw and Named Tuple
+- WL#16284: Update the Python Protobuf version
 - WL#16283: Remove OpenTelemetry Bundled Installation
 - BUG#36664998: Packets out of order error is raised while changing user in aio
 - BUG#36611371: Update dnspython required versions to allow latest 2.6.1
